Add functions to break loading if cert not approved and userapproval on cert changes
Signed-off-by: Antoine Cardon <antoine@toinews.net>

--- a/cw_popup.html
+++ b/cw_popup.html
@@ -63,6 +63,7 @@
 			<input id="state" type="button" />
 			<input id="settingsLink" type="button" data-i18n="value=popupSettings;title=popupSettingsTooltip" />
 			<input id="storageLink" type="button" data-i18n="value=popupStorage;title=popupStorageTooltip" />
+			<input id="refreshLink" type="button" data-i18n="value=popupRefresh;title=popupRefreshTooltip" />
 		</nav>
 		<script src="cw_common.js"></script>
 		<script src="cw_popup.js"></script>
