--- a/cw_settings.html
+++ b/cw_settings.html
@@ -118,6 +118,26 @@
 					</td>
 				</tr>
 
+				<tr data-i18n="title=settingsUserApprovalRequiredTooltip">
+					<td class="key">
+						<label for="userApprovalRequired" data-i18n="settingsLblUserApprovalRequired"></label>
+					</td>
+					<td>
+						<input type="checkbox" name="userApprovalRequired" id="userApprovalRequired" />
+						<label for="userApprovalRequired" data-i18n="settingsUserApprovalRequired"></label>
+					</td>
+				</tr>
+
+				<tr data-i18n="title=settingsStrictModeTooltip">
+					<td class="key">
+						<label for="strictMode" data-i18n="settingsLblstrictMode"></label>
+					</td>
+					<td>
+						<input type="checkbox" name="StrictMode" id="strictMode" />
+						<label for="strictMode" data-i18n="settingsstrictMode"></label>
+					</td>
+				</tr>
+
 				<tr>
 					<td class="save">
 						<input type="button" id="save" disabled data-i18n="value=settingsSave" />
