Add blocked domains and possibility to reject certificates
Signed-off-by: Antoine Cardon <antoine@toinews.net>

--- a/cw_popup.html
+++ b/cw_popup.html
@@ -57,6 +57,11 @@
 				<span id="numStored"></span>
 				<ul id="storedList"></ul>
 			</p>
+			<p>
+				<img src="icons/cw_16_error.png" alt="" width="16" height="16" />
+				<span id="numRejected"></span>
+				<ul id="rejectedList"></ul>
+			</p>
 		</main>
 
 		<nav>
