--- a/cw_settings.html
+++ b/cw_settings.html
@@ -73,6 +73,15 @@
 					</td>
 				</tr>
 
+				<tr data-i18n="title=settingsBlockedDomainsTooltip">
+					<td class="key">
+						<label for="blockedDomains" data-i18n="settingsLblBlockedDomains"></label>
+					</td>
+					<td>
+						<textarea id="blockedDomains" rows="15" data-i18n="placeholder=settingsBlockedDomainsTooltip"></textarea>
+					</td>
+				</tr>
+
 				<tr data-i18n="title=settingsLogLevelTooltip">
 					<td class="key">
 						<label for="logLevel" data-i18n="settingsLblLogLevel"></label>
